<resources>
    <string name="app_name">Money manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_chart">Chart</string>
    <string name="menu_categ">Categorii</string>
    <string name="menu_export">Exportă</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_rating">Rate the app</string>
    <string name="valoareLabel">Valoare:</string>
    <string name="addVenitTitle">Adaugă venit</string>
    <string name="addCheltuialaTitle">Adaugă cheltuială</string>
    <string name="categorieLabel">Categorie:</string>
    <string name="valutaLabel">Valută</string>
    <string name="cashLabel">Cash</string>
    <string name="cardLabel">Card</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="titluProvizoriu">Titlu</string>
    <string name="eur">EUR</string>
    <string name="usd">USD</string>
    <string name="ron">RON</string>
    <string name="venituri">Venituri</string>
    <string name="cheltuieli">Cheltuieli</string>
    <string name="balanta">Balanță</string>
    <string name="istoricTranzactiiTitle">Istoric tranzacții</string>
    <string name="registerLabel">Nu ai cont? Înregistrează-te</string>
    <string name="parola">Parolă:</string>
    <string name="login">Login</string>
    <string name="textProvizoriu">Content to be done</string>

    <string name="title_activity_categorii">CategoriiActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="adauga_categorie">ADAUGĂ CATEGORIE</string>
    <string name="nume_categorie">Nume categorie:</string>
    <string name="titleAddVen">Adaugă categorie venit</string>
    <string name="addCheltTitle">Adaugă categorie cheltuială</string>
    <string name="questionRating">Îți place să folosești aplicația?</string>
    <string name="adauga_detalii_label">Adaugă detalii</string>
    <string name="adauga_feedback">Adaugă feedback</string>
    <string name="convertor_title">Convertor valutar</string>
    <string name="suma">Suma:</string>
    <string name="in">În:</string>
    <string name="convert">Convertește</string>
    <string name="din">Din:</string>
    <string name="editTranzactie">Editează tranzacție</string>
    <string name="registerTitle">Creează un cont nou</string>
    <string name="nume">Nume:</string>
    <string name="prenume">Prenume:</string>
    <string name="mail">Mail:</string>
    <string name="logout">Deconectează-te</string>
    <string name="sterge_contul">Șterge contul</string>
    <string name="export_title">Exportă raportul tranzacțiilor tale!</string>
    <string name="type_title">Alege tipul fișierului</string>
    <string name="txt">.txt</string>
    <string name="csv">.csv</string>
    <string name="convertorTitle">Convertor valutar</string>
    <string name="menu_stat">Statistici</string>
    <string name="statTitle">Statistici</string>
    <string name="situatieBalantaText">Situația balanței dumneavoastră:</string>
    <string name="statsFirebaseText">În medie, un utilizator al aplicației are în decursul unei luni:</string>
    <string name="textBarChart">În ceea ce privește cheltuielile dumneavoastră, situația este următoarea:</string>
    <string name="title_activity_contact">Contact</string>
    <string name="menu_firebase">Contribuie la statistică!</string>
</resources>
