<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_convertor"
            android:icon="@drawable/ic_convert"
            android:title="@string/convertor_title" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_stat" />
        <item
            android:id="@+id/nav_categ"
            android:icon="@drawable/ic_folder"
            android:title="@string/menu_categ" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_save"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_rating" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_deleteUser"
            android:icon="@drawable/ic_remove_user"
            android:title="@string/sterge_contul">
        </item>
    </group>
</menu>
