<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperatiuneActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/fab_margin">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Title"
                android:textAlignment="center"
                android:textSize="@dimen/titleSize"
                android:text="@string/titluProvizoriu">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/categorieLabel">
                </TextView>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerSelect"
                    android:spinnerMode="dropdown">
                </Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valoareLabel">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ETvaloare"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/fab_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valutaLabel"></TextView>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:id="@+id/RGvaluta">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/ChIdRon"
                        android:text="@string/ron"></RadioButton>

                    <RadioButton
                        android:id="@+id/ChIdEur"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/eur">
                    </RadioButton>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/ChIdUsd"
                        android:text="@string/usd">
                    </RadioButton>
                </RadioGroup>
            </LinearLayout>

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/DP">
            </DatePicker>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RGNatura">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cash"
                    android:text="@string/cashLabel">
                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card"
                    android:text="@string/cardLabel">
                </RadioButton>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:id="@+id/BtnIdOK">
                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/BtnIdCancel"
                    android:onClick="cancelOperatiune"></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>