<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:padding="5dp"
    android:layout_gravity="center"
    android:background="@android:color/white">
    <TextView
        android:id="@+id/txtcloseStat"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Furnizează informații referitoare la balanța ta lunară"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheltuieli"
            android:layout_marginTop="@dimen/fab_margin">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ETCheltuieliLunare">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venituri"
            android:layout_marginTop="@dimen/fab_margin">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ETVenituriLunare">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/statOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/myColorPrimaryDark"/>
        <Button
            android:id="@+id/statCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/myColorPrimaryDark"/>
    </LinearLayout>
</LinearLayout>