<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity"
    android:orientation="vertical">
    <!--titlu sectiune-->
    <TextView
        android:id="@+id/statsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statTitle"
        android:textColor="@color/myColorPrimaryDark"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin">
    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <!--sectiune date preluate din firebase-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/fab_margin_half"
        android:text="@string/statsFirebaseText"
        android:textStyle="bold">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin_half"
        android:paddingRight="@dimen/fab_margin_half">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/background">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="@string/cheltuieli">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:id="@+id/TVCheltMed">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/background">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:text="@string/venituri">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:id="@+id/TVVenMed">
            </TextView>
        </LinearLayout>
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/situatieBalantaText"
            android:paddingTop="@dimen/fab_margin"
            android:paddingLeft="@dimen/fab_margin_half"
            android:textStyle="bold">
        </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_height="800px"
        android:id="@+id/PieChartView"
        android:orientation="horizontal"
        android:background="@drawable/background">
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBarChart"
        android:paddingTop="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin_half"
        android:textStyle="bold">
    </TextView>
            <LinearLayout
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="800px"
                android:id="@+id/BarChartView"
                android:orientation="horizontal"
                android:background="@drawable/background">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>