<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColorPrimary">

    <RatingBar
        android:id="@+id/ratingApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="5"
        android:stepSize="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/labelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionRating"
        android:textColor="@android:color/white"
        android:textSize="@dimen/smallerTitleSize"
        app:layout_constraintBottom_toTopOf="@+id/ratingApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/labelAddDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adauga_detalii_label"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingApp"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/etDetalii"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelAddDetails"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/buttonAddFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adauga_feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDetalii"
        app:layout_constraintVertical_bias="0.333"
        android:onClick="addFeedback"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/myColorPrimaryDark" />
</androidx.constraintlayout.widget.ConstraintLayout>